--- a/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
+++ b/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
@@ -575,7 +575,7 @@
             <td class="px-1 py-1 border border-gray-300 text-center">{{ team.project_name || '-' }}</td>
             <td class="px-1 py-1 border border-gray-300 text-center">{{ team.employee_name || '-' }}</td>
             <td class="px-1 py-1 border border-gray-300 text-center">{{ team.project_role_name || '-' }}</td>
-            <td class="px-1 py-1 border border-gray-300 text-center">{{ team.project_manager_name || '-' }}</td>
+            <td class="px-1 py-1 border border-gray-300 text-center">{{ team.current_project_manager_name || '-' }}</td>
             <td class="px-1 py-1 border border-gray-300 text-center">{{ team.start_date | date:'dd-MMM-yyyy' }}</td>
             <td class="px-1 py-1 border border-gray-300 text-center">{{ team.end_date | date:'dd-MMM-yyyy' }}</td>
             <td class="px-1 py-1 border border-gray-300 text-center">
