--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -222,7 +222,10 @@
     <div class="relative" #userDropdown>
       <button (click)="toggleDropdown()"
         class="flex items-center text-gray-700 font-medium text-sm sm:text-base cursor-pointer px-4 py-2 rounded-lg transition-all hover:bg-gray-100">
-        <img src="user.png" alt="User Icon" class="h-6 w-6 mr-2" />
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+      </svg>
         <span>Welcome, {{ loggedInUserName }}</span>
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 transition-transform"
           [class.rotate-180]="showDropdown" viewBox="0 0 20 20" fill="currentColor">
@@ -237,12 +240,18 @@
         class="absolute right-0 mt-2 w-52 bg-white shadow-lg rounded-lg overflow-hidden border border-gray-200 z-10">
         <button class="flex items-center w-full text-base text-gray-700 hover:bg-gray-100 transition px-4 py-3"
           (click)="showChangePasswordForm = !showChangePasswordForm" (click)="openChangePasswordModal()">
-          <img src="change-password.png" alt="Change Password Icon" class="h-5 w-5 mr-2" />
+          <svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                  d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+        </svg>
           Change Password
         </button>
         <button class="flex items-center w-full text-base text-red-600 hover:bg-red-100 transition px-4 py-3"
           (click)="logout()">
-          <img src="logout.png" alt="Logout Icon" class="h-5 w-5 mr-2" />
+          <svg class="h-5 w-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                  d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
+        </svg>
           Logout
         </button>
       </div>
