report project team

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -245,6 +245,14 @@
     </svg>
     Team Timesheets Report
   </a>
+  <a [routerLink]="['/report-section', 'project-team-report']" routerLinkActive="active-link"
+  class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition flex items-center">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
+  </svg>
+  Project Team Report
+</a>
+
   
   <!-- Add more report links here as needed -->
 </div>
